tests/NormalTests/paczka1/fuzzy1/31320315.err
Error in line 7: Vs2C A167 46,6
Error in line 20: Vs2C S727 32,2
